--- a/index.html
+++ b/index.html
@@ -1,18 +1,20 @@
 <!DOCTYPE html>
-<html lang="pt-br">
+<html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Catálogo de Filmes</title>
-  <link rel="stylesheet" href="assets/style.css">
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="assets/style.css">
+    <title>Movie Catalog</title>
 </head>
 <body>
-  <header>
-    <h1>Catálogo de Filmes</h1>
-  </header>
-
-  <div id="movies-container"></div>
-
-  <script src="assets/script.js"></script>
+    <header>
+        <h1>Movie Catalog</h1>
+    </header>
+    <div id="search-container">
+        <input type="text" id="search" placeholder="Search...">
+        <button onclick="searchMovies()">Search</button>
+    </div>
+    <div id="movie-container"></div>
+    <script src="assets/script.js"></script>
 </body>
 </html>
